src/assets/scss/_variables.scss
$body-font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
$font-size-root: 14px !default;
$small-breakpoint: (767px);
$medium-breakpoint: (1024px);
$screen: "only screen";
$small-up: $screen;
$small-only: "#{$screen} and (max-width: #{$small-breakpoint})";
$medium-up: "#{$screen} and (min-width:#{$small-breakpoint + 1})";
$medium-only: "#{$screen} and (min-width:#{$small-breakpoint + 1}) and (max-width:#{$medium-breakpoint})";

$color-alert-background: #fef6e6;
$color-alert-error-background: #f2dede;
$color-alert-error-foreground: #b94a48;
$color-alert-foreground: #976707;
$color-alert-foreground-selected: #876c3b;
$color-alert-info-foreground: #3a87ad;
$color-alert-info-background: #d9edf7;
$color-alert-info-background-dark: #3a87ad;
$color-alert-success-background: #dff0d8;
$color-alert-success-foreground: #468847;


$color-black: #000;
$color-body-black: #474747;
$color-button-background: #f7f7f7;
$color-button-border: #d1d1d1;
$color-button-grey-border: #d0d0d0;
$color-button-grey-gradient-1: #fefefe;
$color-button-grey-gradient-2: #ececec;
$color-button-grey-text: #464646;
$color-button-primary-background: #3b7ea1;
$color-button-primary-border: #265269;
$color-button-primary-color: #fff;
$color-button-primary-hover-background: #346f8e;
$color-container-grey-background: #edf0f2;
$color-container-grey-border: #e5e5e5;
$color-dark-tangerine: #f1a91e;
$color-feature-icon-box-background: #f7f7f7;
$color-feature-icon-box-border: #eee;
$color-feature-icon-color: #cbcbcb;
$color-grey: #ccc;
$color-grey-area-border-dark: #d5d5d5;
$color-grey-disabled: #757575;
$color-harley-davidson-orange: #cf1715;
$color-headers: #424242;
$color-help-link-blue: #2274a7;
$color-item-group-item-border: #c1c7cf;
$color-nobel: #999;
$color-off-black: #333;
$color-orange-button-bg-selected: #a16e1e;
$color-orange-button-bg: #c88926;
$color-orange-button-border-selected: #553d0d;
$color-orange-button-border: #705012;
$color-primary: #3ba1c4;
$color-red-button-bg-selected: #89242a;
$color-red-button-bg: #af333a;
$color-red-button-border-selected: #4e191f;
$color-red-button-border: #6c232b;
$color-red-row-highlighted: #f2dddf;
$color-salem: #0d863d;
$color-success: #dff0d8;
$color-table-border-grey: #d3dbe0;
$color-table-header-border-grey: #ababab;
$color-table-cell-border-grey: #d6d6d6;
$color-table-cell-bg-grey: #f5f5f5;
$color-very-light-grey: #ccc;
$color-whisper: #eee;
$color-white: #fff;
$color-white-smoke: #f6f6f6;
$color-white-translucent: rgba(255, 255, 255, .5);
$color-yellow-row-highlighted: #fefae4;

$primary-color: #2683bc;
$theme-colors: () !default;
$theme-colors: map-merge(
    (
      'cc-light': #f7f7f7,
      'cc-primary': $color-primary
    ),
    $theme-colors
);

